# DAT151-PLT

./: flake.nix  readme.md
lab1/: default.nix  lab1.cabal
lab1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
